feat: dark mode

--- a/res/view/view.html
+++ b/res/view/view.html
@@ -7,6 +7,10 @@
     <title>Viewbox</title>
 </head>
 <style>
+    :root {
+        color-scheme: light dark;
+    }
+
     .wrap{
         width: 100%;
     }
