--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+:root {
+    color-scheme: light dark;
+}
+
+body {
+    background-color: Canvas;
+    color: CanvasText;
+}
+
 button,
 summary{
     outline: none;
@@ -5,12 +14,12 @@ summary{
 }
 
 a{
-    color: gray;
+    color: light-dark(gray, lightgray);
     text-decoration: none;
 }
 
 .nav{
-    background:whitesmoke;
+    background:light-dark(whitesmoke, rgb(71, 71, 71));
     padding: 5px 10px;
     margin-bottom: 10px;
     overflow-y: hidden;
@@ -85,7 +94,7 @@ a{
     margin: 0 2em;
     max-width: 50em;
     font-size: smaller;
-    color: gray;
+    color: light-dark(gray, lightgray);
 }
 
 #about #copyright-hint {
@@ -114,8 +123,8 @@ a{
 }
 
 .texCode,#texAllCode{
-    border: 2px solid transparent;
-    background-color: white;
+    border: 2px solid light-dark(white, rgb(30,30,30));
+    /* background-color: Canvas; */
 }
 
 #code {
@@ -168,6 +177,8 @@ textarea{
     margin-bottom: 7px;
     border-radius: 0px 0px 10px 10px;
     border: 1.5px solid green;
+    background-color: white;
+    color: black;
 }
 
 .container{
@@ -201,11 +212,11 @@ footer{
 #addtooltip button {
     width: 100px;
     text-align: left;
-    background-color: white;
-    border: 1px solid rgb(68, 68, 148);
+    background-color: Canvas;
+    border: 1px solid light-dark(rgb(68, 68, 148), skyblue);
     border-radius: 0px;
     transition: ease-in 0.2s;
-    color: rgb(68, 68, 148);
+    color: light-dark(rgb(68, 68, 148), skyblue);
 }
 
 #addbuttons button {
@@ -268,7 +279,7 @@ footer{
 details {
     margin: 0px 2px 10px 0px;
     padding: 10px;
-    background: rgb(250, 250, 250);
+    background: light-dark(whitesmoke, rgb(52, 52, 52));
     box-shadow: 1px 1px 1px 1px rgba(129, 129, 129, 0.4);
     border-radius: 10px;
 }
@@ -276,7 +287,7 @@ details {
 summary {
     margin: 5px;
     font-weight: 600;
-    color: gray;
+    color: light-dark(gray, lightgray);
 }
 
 #axis{
@@ -312,13 +323,13 @@ summary {
 }
 
 #series .upBut {
-    background-color:rgb(255, 95, 95);
+    background-color: light-dark(rgb(255, 95, 95), rgb(157, 58, 58));
     color: white;
-    border: 1px solid red;
+    border: 1px solid light-dark(red, darkred);
 }
 
 #series .upBut:hover {
-    background-color: rgb(255, 143, 143);
+    background-color: light-dark(rgb(255, 143, 143), rgb(199, 74, 74));
 }
 
 #series .deleteBut {
@@ -358,7 +369,7 @@ summary {
 
 .seriesitem .type{
     margin: 3px 0px 5px 0px;
-    color: #666;
+    color: light-dark(#666, white);
 }
 
 .fileChooser {
@@ -389,8 +400,8 @@ summary {
     height: 20px;
     top: 0;
     content: " ";
-    background-color: #fff;
-    color: #fff;
+    background-color: Canvas;
+    color: white;
     display: inline-block;
     visibility: visible;
     border: 1px solid grey;
@@ -417,7 +428,7 @@ summary {
 
 #series .ptd input[type=checkbox]:checked::after {
     background-color: #ca710b;
-    border: 1px solid red;
+    border: 1px solid light-dark(red, darkred);
     content: "+";
     font-size: 15px;
     text-align: center;
@@ -454,7 +465,7 @@ summary {
     cursor: col-resize;
 }
 .gutter.gutter-horizontal:hover {
-    background-color: lightgray;
+    background-color: light-dark(lightgray, darkgray);
 }
 #panel-three{
     overflow-x:hidden;
@@ -467,12 +478,12 @@ input[type=text]{
 }
 
 #data input[type=text]{
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: light-dark((255, 255, 255, 0.6), (255, 255, 255, 0.4));
     margin: 0px;
 }
 
 .seriesitem:hover {
-    background-color: rgba(128, 128, 128, 0.1);
+    background-color: light-dark(rgba(128, 128, 128, 0.1), rgba(128, 128, 128, 0.3));
 }
 
 .parambar, .coordbar, .tableparambar{
@@ -505,7 +516,7 @@ input[type=text]{
 
 .parambar {
     /* background-color: rgba(173, 216, 230, 0.3); */
-    background-color: white;
+    background-color: Canvas;
     border-top: 1px solid blue;
     border-bottom: 1px solid blue;
 }
@@ -518,8 +529,8 @@ input[type=text]{
 
 .tableparambar {
     background-color: rgba(255, 0, 0, 0.1);
-    border-top: 1px solid red;
-    border-bottom: 1px solid red;
+    border-top: 1px solid light-dark(red, darkred);
+    border-bottom: 1px solid light-dark(red, darkred);
 }
 
 .param:focus,
