fix: inner purl dark mode override

--- a/res/view/view.html
+++ b/res/view/view.html
@@ -11,6 +11,11 @@
         color-scheme: light dark;
     }
 
+    body {
+        background-color: Canvas;
+        color: CanvasText;
+    }
+
     .wrap{
         width: 100%;
     }
